Fix hero overflow

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -60,7 +60,7 @@ section.main-hero {
 		}
 		&.image-side {
 			@media (max-width: 950px) {
-				padding: * 80px;
+				margin: * 80px;
 				background-color: white;
 			}
 		}
